--- a/app/src/main/res/layout/fragment_courses_list.xml
+++ b/app/src/main/res/layout/fragment_courses_list.xml
@@ -1,24 +1,24 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/courses_mainLayout"
+    android:id="@+id/tasks_mainLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CoursesFragment"> <!--.gui.-->
 
 
     <FrameLayout
-        android:id="@+id/courses_listLayout"
+        android:id="@+id/tasks_listLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ListView
-            android:id="@+id/courses_listCourses"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/list"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/courses_floatingActionButton_add"
+            android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
